k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      service: frontend
      app: frontend
  template:
    metadata:
      labels:
        service: frontend
        app: frontend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9102"
        consul.hashicorp.com/agent-inject: 'true'
        # vault.hashicorp.com/agent-inject: 'true'
        # vault.hashicorp.com/role: 'frontend'
        # vault.hashicorp.com/agent-inject-secret-database-config.txt: 'internal/data/database/config'
    spec:
      serviceAccountName: frontend
      containers:
        - name: frontend
          image: hashicorpdemoapp/frontend:v1.0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          # Added for debugging purposes - NOT RECOMMENDED
          # securityContext:
          #   allowPrivilegeEscalation: false
          #   runAsUser: 0
