k8s/products-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: products-api
spec:
  selector:
    app: products-api
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-api
  labels:
    app: products-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-api
  template:
    metadata:
      labels:
        app: products-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9102"
        consul.hashicorp.com/connect-inject: "true"
    spec:
      serviceAccountName: products-api
      volumes:
        - name: config
          configMap:
            name: db-configmap
            items:
              - key: config
                path: conf.json
      containers:
        - name: products-api
          image: cclimdev/product-api:0.1.3
          # image: product-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
            - containerPort: 9103
          livenessProbe:
            httpGet:
              path: /health
              port: 9090
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 30
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: true
