k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hashicups-ingress
  namespace: hashicups
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    supertype: "ingress"
spec:
  rules:
    - host: "hashicups.lab.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
